--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">drkbinary</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_about">About…</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">drkBinary</string>
     <string name="placeholder">\?</string>
     <string name="result_placeholder">result</string>
-    <string name="validate" >Validate</string>
+    <string name="validate">Validate</string>
+    <string name="close">Close</string>
 </resources>
